# aws-codeartifact-demo

./: .coverage  .flake8  .flake8.swp  README.md  noxfile.py  pyproject.toml
cdk/: buildspec.yml  cdk.json  package-lock.json  package.json  testspec.yml
cdk/lib/: cdk-stack.ts
cdk/pipeline/: cdk-stack.ts
src/my_package/: cli.py
tests/: test_console.py
