[tool.poetry]
name = "my_package"
version = "0.1.0"
description = ""
authors = ["Antoine Vandermeersch <avdmeers@gmail.com>"]

[tool.poetry.scripts]
my_package = "my_package.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["my_package"]

[tool.coverage.report]
show_missing = true
fail_under = 100
